# PCA_for_time_series

./: .buildinfo  .buildinfo.bak  .gitignore  Menu.py  README.md  genindex.html  index.html  misspecified.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  synthetic.ipynb  test.py  utils.py
.github/workflows/: build_site.yml  publish.yml
TS_PCA/: __init__.py  barycenter.py  classifier.py  lddmm.py  optimizer_new_memory_not_use.py  plotting.py  statistic.py
_sources/: index.rst.txt
_sources/source/not_class/: kernel.rst.txt  lddmm.rst.txt
docs/: conf.py  conf_gae.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/not_class/: kernel.doctree  lddmm.doctree  loss.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/not_class/: loss.rst.txt
docs/_build/html/source/not_class/: kernel.html  lddmm.html  loss.html
docs/source/not_class/: kernel.rst  lddmm.rst  loss.rst
pages/: 1_parameter_shooting.py  2_barycenter.py  3_on_registration.py  4_many_registration.py
results/: barycenter_p0s.npy  barycenter_q0.npy  registration_p0s.npy  registration_p0s_N8.npy  registration_q0.npy  registration_q0_N8.npy
source/not_class/: kernel.html  lddmm.html  loss.html
src/: __init__.py  kernel.py  lddmm.py  loss.py  optimizer.py  utils.py
